--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -215,3 +215,14 @@
 #chat-mainframe[data-visible="true"] {
     scale: 1;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
