--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -214,3 +214,14 @@
 #chat-mainframe[data-visible="true"] {
     display: grid;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
